@@ -1,5 +1,7 @@
 2009-12-28  Torbjorn Granlund  <tege@gmplib.org>
 
+	* tune/tuneup.c (tune_mu_div, tune_mu_bdiv): Set step_factor.
+
 	* tune/common.c, tune/speed.c, tune/speed.h: Support measuring
 	mpn_lshiftc.
 
